--- a/blocks/components/projects_grid/type_1/projects_grid_style_t1.css
+++ b/blocks/components/projects_grid/type_1/projects_grid_style_t1.css
@@ -525,7 +525,7 @@
 
 @media (max-width: 1024px) {
     .projects-grid-component {
-        padding: 0 var(--spacing-6);
+        padding: 0 var(--spacing-10);
     }
 }
 
